# Ray-Tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile  report_profile.ncu-rep  report_profile_2.ncu-rep
client/: go.mod  main.go
proto/: go.mod  ray_tracer.pb.go  ray_tracer.proto  ray_tracer_grpc.pb.go
server/: go.mod  main.go
server/proto/: ray_tracer.pb.go  ray_tracer.proto  ray_tracer_grpc.pb.go
src/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cu  ray.h  sphere.h  utils.h  vec3.h
